[package]
name = "bitcoin-scriptexec"
version = "0.0.0"
edition = "2021"
description = "Bitcoin Script interpreter/executor"
authors = ["Steven Roose <steven@roose.io>"]
license = "CC0-1.0"
repository = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "btcexec"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "wasm"]
json = ["serde", "serde_json", "bitcoin/serde"]
cli = ["json", "clap"]
wasm = ["json", "wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "getrandom/js"]

[dependencies]
bitcoin = { version = "0.32.1" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "bitvmx"}
bitcoin-opcode-utils = { git = "https://github.com/FairgateLabs/rust-bitcoin-opcode-utils" }
lazy_static = "1.4.0"

# cli
clap = { version = "4", features = [ "derive" ], optional = true }

# wasm
serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
serde-wasm-bindgen = { version = "0.6.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
# I think we need to mention this for secp256k1-sys to work
getrandom = { version = "0.2", optional = true }

hex-conservative = "0.2.1"
